--- a/requirements.txt
+++ b/requirements.txt
@@ -43,8 +43,8 @@ tensorflow==2.3.0
 tensorflow-estimator==2.3.0
 termcolor==1.1.0
 threadpoolctl==2.1.0
-torch==1.6.0
-torchvision==0.7.0
+torch==1.6.0+cu101
+torchvision==0.7.0+cu101
 urllib3==1.25.10
 Werkzeug==1.0.1
 wrapt==1.12.1
