--- a/requirements.txt
+++ b/requirements.txt
@@ -1,72 +1,81 @@
 absl-py==0.11.0
+astor==0.7.1
 astunparse==1.6.3
 backcall==0.2.0
-cachetools==4.2.1
-certifi==2020.12.5
-chardet==4.0.0
+cachetools==4.1.1
+certifi==2020.6.20
+chardet==3.0.4
+cloudpickle==1.6.0
 colorama==0.4.4
 cycler==0.10.0
 dataclasses==0.8
 decorator==4.4.2
+dm-tree==0.1.5
+flatbuffers==1.12
+future==0.18.2
 gast==0.3.3
-google-auth==1.26.1
-google-auth-oauthlib==0.4.2
+google-auth==1.21.3
+google-auth-oauthlib==0.4.1
 google-pasta==0.2.0
-grpcio==1.35.0
+grpcio==1.32.0
 h5py==2.10.0
 idna==2.10
-importlib-metadata==3.4.0
-ipykernel==5.5.0
+importlib-metadata==2.0.0
+ipykernel==5.4.3
 ipython==7.16.1
 ipython-genutils==0.2.0
 jedi==0.18.0
-Jinja2==2.11.3
-joblib==1.0.1
+joblib==0.16.0
 jupyter-client==6.1.11
 jupyter-core==4.7.1
 Keras-Preprocessing==1.1.2
-kiwisolver==1.3.1
-Markdown==3.3.3
-MarkupSafe==1.1.1
-matplotlib==3.3.4
+kiwisolver==1.2.0
+lazy-object-proxy==1.5.2
+Markdown==3.2.2
+matplotlib==3.3.2
 munkres==1.1.4
 networkx==2.5
-numpy==1.18.5
+numpy==1.19.5
 oauthlib==3.1.0
 opt-einsum==3.3.0
-pandas==1.1.5
+pandas==1.1.2
 parso==0.8.1
 pickleshare==0.7.5
-Pillow==8.1.0
+Pillow==7.2.0
 prompt-toolkit==3.0.16
-protobuf==3.14.0
+protobuf==3.13.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 Pygments==2.8.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
-pytz==2021.1
+pytz==2020.1
 pywin32==300
 pyzmq==22.0.3
-requests==2.25.1
+requests==2.24.0
 requests-oauthlib==1.3.0
-rsa==4.7
-scikit-learn==0.24.1
-scipy==1.5.4
-seaborn==0.11.1
+rsa==4.6
+scikit-learn==0.23.2
+scipy==1.4.1
+seaborn==0.11.0
 six==1.15.0
 tensorboard==2.4.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.3.1
-tensorflow-estimator==2.3.0
+tensorboard-plugin-wit==1.7.0
+tensorflow==2.4.1
+tensorflow-estimator==2.4.0
+tensorflow-probability==0.12.1
 termcolor==1.1.0
 threadpoolctl==2.1.0
+torch==1.8.0+cu111
+torchaudio==0.8.0
+torchvision==0.9.0+cu111
 tornado==6.1
-tqdm==4.56.2
+tqdm==4.50.0
 traitlets==4.3.3
+typed-ast==1.4.2
 typing-extensions==3.7.4.3
-urllib3==1.26.3
+urllib3==1.25.10
 wcwidth==0.2.5
 Werkzeug==1.0.1
 wrapt==1.12.1
-zipp==3.4.0
+zipp==3.2.0
