--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 absl-py==0.11.0
+ase==3.21.1
 astor==0.7.1
 astunparse==1.6.3
 backcall==0.2.0
@@ -17,6 +18,7 @@ gast==0.3.3
 google-auth==1.21.3
 google-auth-oauthlib==0.4.1
 google-pasta==0.2.0
+googledrivedownloader==0.4
 grpcio==1.32.0
 h5py==2.10.0
 idna==2.10
@@ -24,17 +26,22 @@ importlib-metadata==2.0.0
 ipykernel==5.4.3
 ipython==7.16.1
 ipython-genutils==0.2.0
+isodate==0.6.0
 jedi==0.18.0
+Jinja2==2.11.3
 joblib==0.16.0
 jupyter-client==6.1.11
 jupyter-core==4.7.1
 Keras-Preprocessing==1.1.2
 kiwisolver==1.2.0
 lazy-object-proxy==1.5.2
+llvmlite==0.36.0
 Markdown==3.2.2
+MarkupSafe==1.1.1
 matplotlib==3.3.2
 munkres==1.1.4
 networkx==2.5
+numba==0.53.1
 numpy==1.19.5
 oauthlib==3.1.0
 opt-einsum==3.3.0
@@ -49,9 +56,11 @@ pyasn1-modules==0.2.8
 Pygments==2.8.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
+python-louvain==0.15
 pytz==2020.1
 pywin32==300
 pyzmq==22.0.3
+rdflib==5.0.0
 requests==2.24.0
 requests-oauthlib==1.3.0
 rsa==4.6
@@ -67,6 +76,11 @@ tensorflow-probability==0.12.1
 termcolor==1.1.0
 threadpoolctl==2.1.0
 torch==1.8.0+cu111
+torch-cluster==1.5.9
+torch-geometric==1.7.0
+torch-scatter==2.0.6
+torch-sparse==0.6.9
+torch-spline-conv==1.2.1
 torchaudio==0.8.0
 torchvision==0.9.0+cu111
 tornado==6.1
